--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "knex": "^0.95.15",
+    "qrcode": "^1.5.0",
+    "speakeasy": "^2.0.0",
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {
